--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
+--only-binary :all:
+
+# Core app dependencies
 streamlit==1.38.0
 pandas==2.3.3
 numpy==1.26.4
 scikit-learn==1.4.2
 scipy>=1.6.0
 cython>=3.0.8
+
+# Build tools
 setuptools
 wheel
+
+# Optional enhancements
 rich>=10.14.0
---only-binary :all:
